Updated about and gbm pages

--- a/great-british-meat-co.html
+++ b/great-british-meat-co.html
@@ -101,6 +101,15 @@
 					<p class="lead">The Great British Meat Co. successfully launch their direct-to-consumer retail offering with this rich, engaging e-commerce website.</p>
 					<p>Leap-frogging the great British meat scandal in early 2013 with the strap line "Only Fools Eat Horses", the timing couldn’t have been better for a well established catering butcher looking to launch its line of restaurant quality meat to a hungry public. The Great British Meat Co started modestly, with a rich, engaging e-commerce website, equipped with some seriously clever social loyalty tools.</p>
 					
+					<figure class="bulge">
+						<img src="img/content/work/gbm/mockups/1.jpg" alt="Great British Meat Co. homepage" />
+					</figure>
+					<figure class="bulge">
+						<img src="img/content/work/gbm/mockups/2.jpg" alt="Great British Meat Co. product page" />
+					</figure>
+					<figure class="bulge">
+						<img src="img/content/work/gbm/mockups/3.jpg" alt="Great British Meat Co. basket page" />
+					</figure>
 				</div>
 			</div>
 							
