--- a/great-british-meat-co.html
+++ b/great-british-meat-co.html
@@ -4,14 +4,14 @@
 
 	<head>
 
-		<title>Great British Meat Co. &middot; Moymadethis</title>
+		<title>Great British Meat Co. &middot; Moy</title>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Future&#38;Co.are an digital production company creating award winning work in film, animation, web and mobile for agencies and brands all over the world.">
-		<meta name="author" content="Future&#38;Co. Ltd.">
+		<meta name="description" content="The portfolio of Stephen Moy. A designer &amp; front-end developer based in Newcastle, England.">
+		<meta name="author" content="Stephen Moy">
 		<meta name="robots" content="INDEX,FOLLOW">
-		<meta name="apple-mobile-web-app-title" content="F&Co">
+		<meta name="apple-mobile-web-app-title" content="moymadethis">
 
 		<link rel="canonical" href="">
 
@@ -32,12 +32,12 @@
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:site" content="@moymadethis">
 		<meta name="twitter:url" property="og:url" content="https://moymadethis.com">
-		<meta name="twitter:title" property="og:title" content="Film Production, Website Design &#38; Development by Future&#38;Co.">
-		<meta name="twitter:description" property="og:description" content="Future&#38;Co. are an integrated digital production company creating award winning work in film, animation, web and mobile for agencies and brands all over the world.">
+		<meta name="twitter:title" property="og:title" content="Stephen Moy is a designer &amp; developer based in Newcastle, England.">
+		<meta name="twitter:description" property="og:description" content="Specialising in user interface design, front-end development &amp; brand identities.">
 		<meta name="twitter:image" property="og:image" content="/img/site/social-logo.png">
 
 		<!-- Windows -->
-		<meta name="msapplication-TileColor" content="#0d0f0f">
+		<meta name="msapplication-TileColor" content="#000000">
 		<meta name="msapplication-TileImage" content="/img/site/apple-touch-icon-144x144-precomposed.png">
 
 		<!-- Fonts -->
@@ -100,6 +100,25 @@
 					<hr />
 					<p class="lead">The Great British Meat Co. successfully launch their direct-to-consumer retail offering with this rich, engaging e-commerce website.</p>
 					<p>Leap-frogging the great British meat scandal in early 2013 with the strap line "Only Fools Eat Horses", the timing couldn’t have been better for a well established catering butcher looking to launch its line of restaurant quality meat to a hungry public. The Great British Meat Co started modestly, with a rich, engaging e-commerce website, equipped with some seriously clever social loyalty tools.</p>
+					
+					<figure style="margin-top: 100px;">
+						<img src="img/content/work/gbm/mockups/1.jpg" alt="Great British Meat Co. homepage" />
+						<figcaption>
+							<p>Homepage mockup.</p>
+						</figcaption>
+					</figure>
+					<figure>
+						<img src="img/content/work/gbm/mockups/2.jpg" alt="Great British Meat Co. product page" />
+						<figcaption>
+							<p>Example product page mockup.</p>
+						</figcaption>
+					</figure>
+					<figure>
+						<img src="img/content/work/gbm/mockups/3.jpg" alt="Great British Meat Co. basket page" />
+						<figcaption>
+							<p>The shopping basket with call to action prompting the user to add further items to their basket to qualify for free shipping.</p>
+						</figcaption>
+					</figure>
 					
 				</div>
 			</div>
