--- a/moor-than-meets-the-eye.html
+++ b/moor-than-meets-the-eye.html
@@ -4,14 +4,14 @@
 
 	<head>
 
-		<title>Moor than meets the eye &middot; Moymadethis</title>
+		<title>Moor than meets the eye &middot; Moy</title>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Future&#38;Co.are an digital production company creating award winning work in film, animation, web and mobile for agencies and brands all over the world.">
-		<meta name="author" content="Future&#38;Co. Ltd.">
+		<meta name="description" content="The portfolio of Stephen Moy. A designer &amp; front-end developer based in Newcastle, England.">
+		<meta name="author" content="Stephen Moy">
 		<meta name="robots" content="INDEX,FOLLOW">
-		<meta name="apple-mobile-web-app-title" content="F&Co">
+		<meta name="apple-mobile-web-app-title" content="moymadethis">
 
 		<link rel="canonical" href="">
 
@@ -32,12 +32,12 @@
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:site" content="@moymadethis">
 		<meta name="twitter:url" property="og:url" content="https://moymadethis.com">
-		<meta name="twitter:title" property="og:title" content="Film Production, Website Design &#38; Development by Future&#38;Co.">
-		<meta name="twitter:description" property="og:description" content="Future&#38;Co. are an integrated digital production company creating award winning work in film, animation, web and mobile for agencies and brands all over the world.">
+		<meta name="twitter:title" property="og:title" content="Stephen Moy is a designer &amp; developer based in Newcastle, England.">
+		<meta name="twitter:description" property="og:description" content="Specialising in user interface design, front-end development &amp; brand identities.">
 		<meta name="twitter:image" property="og:image" content="/img/site/social-logo.png">
 
 		<!-- Windows -->
-		<meta name="msapplication-TileColor" content="#0d0f0f">
+		<meta name="msapplication-TileColor" content="#000000">
 		<meta name="msapplication-TileImage" content="/img/site/apple-touch-icon-144x144-precomposed.png">
 
 		<!-- Fonts -->
