Added addtional screens to ps to project pages. Not complete

--- a/work.html
+++ b/work.html
@@ -198,7 +198,7 @@
 								<h2 class="work__title"><a href="slim-be.html">Slim-Be</a></h2>
 								<hr />
 								<h4 class="work__sub-title">Design + Front-end Dev</h4>
-								<p></p>
+								<p>We were tasked to design and build a second-screen responsive landing page for weight-loss brand Slim-Be to help promote and sell their new range of "Portion Shots"</p>
 								<a href="slim-be.html" class="btn case__btn">View Case Study</a>
 							</div>
 						</li>
