--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<div class="masthead__wrap">
 					<h1>Moy made this,<br /> for real.</h1>
 					<hr />
-					<p class="lead">Stephen Moy is a designer + front-end developer straight outta Newcastle, England.<br /> Yep, where the beer's from.</p>
+					<p class="lead">Stephen Moy is a designer + front-end developer from Newcastle, England.<br /> Yep, where the beer's from.</p>
 					<p>With over 10 years commercial experience I specialise in user interface design + front-end development. If you'd like to have a chat about a project, please <a href="mailto:moymadethis@gmail.com">get in touch</a>.</p>				
 				</div>
 				<div class="mouse"></div>
