--- a/oobe.html
+++ b/oobe.html
@@ -93,7 +93,7 @@
 				
 			</div>
 			
-			<div class="band">
+			<div class="band band--tint">
 				<div class="wrap wrap--narrow">
 					
 					<h1>OOBE</h1>
