Added new content, mainly project screenshots

--- a/oobe.html
+++ b/oobe.html
@@ -96,9 +96,12 @@
 			<div class="band band--tint">
 				<div class="wrap wrap--narrow">
 					
-					<h1>OOBE</h1>
-					<hr />
-					<p class="lead">We helped OOBE captivate their audience with this minimalist and yet highly interactive responsive website that allows their stunning portfolio of work to really sing.</p>
+					<div class="hgroup">
+						<h1>OOBE</h1>
+						<p class="lead">We helped OOBE captivate their audience with this minimalist and yet highly interactive responsive website that allows their stunning portfolio of work to really sing.</p>
+						<hr />
+					</div>
+					
 					<p>Delivering a responsive website that would do justice to such a beautiful body of work across desktop, tablet and mobile devices was a huge challenge for our web design team. We chose a clean, minimal approach in order to compliment such an eclectic collection of art, 
 topped off with some lovely animated interactive details.</p>
 
