Added OG meta to homepage head

--- a/index.html
+++ b/index.html
@@ -27,14 +27,20 @@
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img/site/apple-touch-icon-72x72-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/site/apple-touch-icon-114x114-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img/site/apple-touch-icon-144x144-precomposed.png">
-
-		<!-- Facebook/Twitter -->
+		
+		<!-- OpenGraph -->
+		<meta property="og:title" content="Stephen Moy is a designer &amp; developer based in Newcastle, England." />
+		<meta property="og:description" content="Specialising in user interface design, front-end development &amp; brand identities." />
+		<meta property="og:url" content="http://moymadethis.com" />
+		<meta property="og:image" content="/img/site/linkedin-share-logo.png" />
+  
+		<!-- Twitter -->
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:site" content="@moymadethis">
-		<meta name="twitter:url" property="og:url" content="https://moymadethis.com">
-		<meta name="twitter:title" property="og:title" content="Stephen Moy is a designer &amp; developer based in Newcastle, England.">
-		<meta name="twitter:description" property="og:description" content="Specialising in user interface design, front-end development &amp; brand identities.">
-		<meta name="twitter:image" property="og:image" content="/img/site/social-logo.png">
+		<meta name="twitter:url" content="https://moymadethis.com">
+		<meta name="twitter:title" content="Stephen Moy is a designer &amp; developer based in Newcastle, England.">
+		<meta name="twitter:description" content="Specialising in user interface design, front-end development &amp; brand identities.">
+		<meta name="twitter:image" content="/img/site/social-logo.png">
 
 		<!-- Windows -->
 		<meta name="msapplication-TileColor" content="#000000">
