Updated linkedin media image

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img/site/apple-touch-icon-144x144-precomposed.png">
 		
 		<!-- OpenGraph -->
-		<meta property="og:title" content="Stephen Moy is a designer &amp; developer based in Newcastle, England." />
+		<meta property="og:title" content="moymadethis.com - The portfolio of Stephen Moy" />
 		<meta property="og:description" content="Specialising in user interface design, front-end development &amp; brand identities." />
 		<meta property="og:url" content="http://moymadethis.com" />
-		<meta property="og:image" content="/img/site/linkedin-share-logo.png" />
+		<meta property="og:image" content="/img/site/linkedin-media-image.png" />
   
 		<!-- Twitter -->
 		<meta name="twitter:card" content="summary">
