Updated og image path to be a full url

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<meta property="og:title" content="moymadethis.com - The portfolio of Stephen Moy" />
 		<meta property="og:description" content="Specialising in user interface design, front-end development &amp; brand identities." />
 		<meta property="og:url" content="http://moymadethis.com" />
-		<meta property="og:image" content="/img/site/linkedin-media-image.png" />
+		<meta property="og:image" content="http://www.moymadethis.com/img/site/linkedin-media-image.png" />
   
 		<!-- Twitter -->
 		<meta name="twitter:card" content="summary">
@@ -40,7 +40,7 @@
 		<meta name="twitter:url" content="https://moymadethis.com">
 		<meta name="twitter:title" content="Stephen Moy is a designer &amp; developer based in Newcastle, England.">
 		<meta name="twitter:description" content="Specialising in user interface design, front-end development &amp; brand identities.">
-		<meta name="twitter:image" content="/img/site/social-logo.png">
+		<meta name="twitter:image" content="http://www.moymadethis.com/img/site/social-logo.png">
 
 		<!-- Windows -->
 		<meta name="msapplication-TileColor" content="#000000">
