--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="The portfolio of Stephen Moy. A designer &amp; front-end developer based in Newcastle, England.">
+		<meta name="description" content="The portfolio of Stephen Moy. A designer + front-end developer based in Newcastle, England.">
 		<meta name="author" content="Stephen Moy">
 		<meta name="robots" content="INDEX,FOLLOW">
 		<meta name="apple-mobile-web-app-title" content="moymadethis">
@@ -30,7 +30,8 @@
 		
 		<!-- OpenGraph -->
 		<meta property="og:title" content="moymadethis.com - The portfolio of Stephen Moy" />
-		<meta property="og:description" content="Specialising in user interface design, front-end development &amp; brand identities." />
+		<meta property="og:description" content="Specialising in user interface design, front-end development + brand identities." />
+		<meta property="og:type" content="website" />
 		<meta property="og:url" content="http://moymadethis.com" />
 		<meta property="og:image" content="http://www.moymadethis.com/img/site/linkedin-media-image.png" />
   
@@ -38,8 +39,8 @@
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:site" content="@moymadethis">
 		<meta name="twitter:url" content="https://moymadethis.com">
-		<meta name="twitter:title" content="Stephen Moy is a designer &amp; developer based in Newcastle, England.">
-		<meta name="twitter:description" content="Specialising in user interface design, front-end development &amp; brand identities.">
+		<meta name="twitter:title" content="Stephen Moy is a designer + front-end developer based in Newcastle, England.">
+		<meta name="twitter:description" content="Specialising in user interface design, front-end development + brand identities.">
 		<meta name="twitter:image" content="http://www.moymadethis.com/img/site/social-logo.png">
 
 		<!-- Windows -->
