Updated parallax js

--- a/infinite-edge.html
+++ b/infinite-edge.html
@@ -152,7 +152,7 @@ visual vocabulary to create a website with character, and a slate of three short
 		<script>window.jQuery || document.write('<script src="js/jquery-3.1.1.min.js"><\/script>')</script>
 		<script src="js/pace.js"></script>
 		<script src="js/svg4everybody.min.js"></script>
-		<script src="js/jquery.parallax.js"></script>
+		<script src="js/parallax.min.js"></script>
 		<script src="js/main.js"></script>
 
 		<!-- Google Analytics -->
