Updated jQuery and Modernizr

--- a/infinite-edge.html
+++ b/infinite-edge.html
@@ -47,11 +47,6 @@
 		<meta name="msapplication-TileColor" content="#000000">
 		<meta name="msapplication-TileImage" content="/img/site/apple-touch-icon-144x144-precomposed.png">
 
-		<!-- Fonts -->
-		
-		<!-- Script -->
-		<script src="js/modernizr-2.8.3.min.js"></script>
-
 	</head>
 
 	<body>
@@ -148,8 +143,9 @@ visual vocabulary to create a website with character, and a slate of three short
 		</div>
 
 		<!-- Scripts -->
-		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-		<script>window.jQuery || document.write('<script src="js/jquery-3.1.1.min.js"><\/script>')</script>
+		<script src="js/modernizr-3.5.0.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
 		<script src="js/pace.js"></script>
 		<script src="js/svg4everybody.min.js"></script>
 		<script src="js/parallax.min.js"></script>
