Updated canonical tag in head

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 		<meta name="robots" content="INDEX,FOLLOW">
 		<meta name="apple-mobile-web-app-title" content="moymadethis">
 
-		<link rel="canonical" href="">
+		<link rel="canonical" href="http://www.moymadethis.com/about.html">
 
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -103,7 +103,7 @@
 					<figure class="pop">
 						<img src="img/content/about/me.jpg" alt="Stephen Moy, leaning against a wall." />
 					</figure>
-					<p>Occasionally I moonlight as a footballer, described as "ever-reliable" by some but "crap" by most. So it's a good job I enjoy being a football spectator, although Newcastle United test the 'enjoy' part on a regular basis. I’ve also developed a penchant for trips overseas to watch football matches. Recent jaunts have taken me to Dortmund, Leverkusen, Hamburg and Berlin. Ich liebe es nach Deutschland zu reisen und ich kann ein bisschen deutsch sprechen ...aber nicht so gut!</p>
+					<p>Occasionally I moonlight as a footballer, described as "ever-reliable" by some but "crap" by most. So it's a good job I enjoy being a football spectator, although Newcastle United test the 'enjoy' part on a regular basis. I’ve also developed a penchant for trips overseas to watch football matches. Recent jaunts have taken me to Dortmund, Leverkusen, Hamburg and Berlin. <em>Ich liebe es nach Deutschland zu reisen und ich kann ein bisschen deutsch sprechen ...aber nicht so gut!</em></p>
 					<p>That compliments my love for travel and exploring new places. Over the last few years I've visited various places in the Czech Republic, Latvia, Hungary, Poland, Germany, Netherlands, Belgium, Denmark and Sweden.</p>
 					<figure class="pop">
 						<img src="img/content/about/map.svg" alt="Map showing recent travel destinations and routes" />
@@ -140,7 +140,7 @@
 		<script src="js/modernizr-3.5.0.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
-		<script src="js/pace.js"></script>
+		<script src="js/nprogress.js"></script>
 		<script src="js/svg4everybody.min.js"></script>
 		<script src="js/parallax.min.js"></script>
 		<script src="js/main.js"></script>
