--- a/slim-be.html
+++ b/slim-be.html
@@ -13,7 +13,7 @@
 		<meta name="robots" content="INDEX,FOLLOW">
 		<meta name="apple-mobile-web-app-title" content="moymadethis">
 
-		<link rel="canonical" href="">
+		<link rel="canonical" href="http://www.moymadethis.com/slim-be.html">
 
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -148,7 +148,7 @@
 		<script src="js/modernizr-3.5.0.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
-		<script src="js/pace.js"></script>
+		<script src="js/nprogress.js"></script>
 		<script src="js/svg4everybody.min.js"></script>
 		<script src="js/parallax.min.js"></script>
 		<script src="js/main.js"></script>
