Updated preload bar

--- a/work.html
+++ b/work.html
@@ -247,6 +247,7 @@
 								<hr />
 								<h4 class="work__sub-title">Brand/Design + Front-end Dev</h4>
 								<p></p>
+								Well it was going to be an online data analytics app that allowed you to process big data and provide visual reports.
 								<a href="simple-data.html" class="btn case__btn">View Case Study</a>
 							</div>
 						</li>
@@ -263,6 +264,8 @@
 							</div>
 						</li>
 					</ul>
+					
+					<a href="#" class="btn">See All Work</a>
 					
 				</div>
 			</div>
