Updated some styles

--- a/index.html
+++ b/index.html
@@ -121,18 +121,13 @@
 			<div class="band">
 				<div class="wrap">
 					
-					<div class="hgroup align-center">
-						<h4>Select Work</h4>
-						<hr />
-					</div>
-					
 					<ul class="work">
 						<li class="work__item">
 							<a href="great-british-meat-co.html" class="work__image-link">
 								<img src="img/content/work/gbm/tile/great-british-meat.jpg" class="work__image" alt="Great British Meat Company" />
 							</a>
 							<div class="work__desc">
-								<h2 class="work__title"><a href="great-british-meat-co.html">Great British<br /> Meat Co.</a></h2>
+								<h2 class="work__title"><a href="great-british-meat-co.html">Great British Meat Co.</a></h2>
 								<hr />
 								<h4 class="work__sub-title">Web Design + Front-end dev</h4>
 								<p>We helped the Great British Meat Co. successfully launch their direct-to-consumer retail offering with this rich, engaging e-commerce website</p>
