--- a/about.html
+++ b/about.html
@@ -69,10 +69,10 @@
 				<nav class="site-nav">
 					
 					<ul class="site-nav__list">
-						<li class="site-nav__item"><a href="index.html" class="site-nav__link">Home</a>
-						<li class="site-nav__item"><a href="work.html" class="site-nav__link">Work</a>
-						<li class="site-nav__item"><a href="about.html" class="site-nav__link current">About</a>
-						<li class="site-nav__item"><a href="mailto:hello@moymadethis.com" class="site-nav__link">Email Me</a>
+						<li class="site-nav__item"><a href="index.html" class="site-nav__link">Home</a></li>
+						<li class="site-nav__item"><a href="work.html" class="site-nav__link">Work</a></li>
+						<li class="site-nav__item"><a href="about.html" class="site-nav__link current">About</a></li>
+						<li class="site-nav__item"><a href="mailto:hello@moymadethis.com" class="site-nav__link">Email Me</a></li>
 					</ul>
 					
 					<ul class="contact-list">
