Updted cta text

--- a/work.html
+++ b/work.html
@@ -275,7 +275,7 @@
 						
 						<div class="grid__item two-thirds">
 							<h4>Can't find what you're after?</h4>
-							<p>If you'd like to discuss a project or you just can't find what you're looking for, please <a href="mailto:hello@moymadethis.com">contact me</a>. It's free after all and I'm sure I can show you some case studies relevant to your project.</p>
+							<p>If you'd like to discuss a project or just can't find what you're looking for please <a href="mailto:hello@moymadethis.com">contact me</a>. It's free after all, and I'm sure I can take you through some case studies relevant to your project.</p>
 						</div>
 						
 						<div class="grid__item one-third">
