--- a/work.html
+++ b/work.html
@@ -279,7 +279,7 @@
 						</div>
 						
 						<div class="grid__item one-third">
-							<a href="mailto:hello@moymadethis.com" class="btn">Send Me An Email</a>
+							<a href="mailto:hello@moymadethis.com" class="btn btn--solid">Send Me An Email</a>
 						</div>
 						
 					</div>
