Updated font sizes and added vd a video to gbm play. HTML player needs to be finished and video maybe edited again

--- a/great-british-meat-co.html
+++ b/great-british-meat-co.html
@@ -108,6 +108,13 @@
 						<img src="img/content/work/gbm/mockups/1.jpg" alt="Great British Meat Co. homepage" />
 					</figure>
 					<figure class="pop">
+						<video preload="auto" loop="loop">
+							<source src="video/work/gbm/xmas-landing.mp4" type="video/mp4">
+							<source src="video/work/gbm/xmas-landing.ogg" type="video/ogg">
+							Your browser does not support the video tag.
+						</video>
+					</figure>
+					<figure class="pop">
 						<img src="img/content/work/gbm/mockups/2.jpg" alt="Great British Meat Co. product page" />
 					</figure>
 					<figure class="pop">
