--- a/work.html
+++ b/work.html
@@ -99,7 +99,7 @@
 								<img src="img/content/work/gbm/tile/great-british-meat.jpg" class="work__image" alt="Great British Meat Company" />
 							</a>
 							<div class="work__desc">
-								<h2 class="work__title"><a href="great-british-meat-co.html">Great British Meat Co.</a></h2>
+								<h2 class="work__title"><a href="great-british-meat-co.html">Great British<br /> Meat Co.</a></h2>
 								<hr />
 								<h4 class="work__sub-title">Web Design + Front-end dev</h4>
 								<p>We helped the Great British Meat Co. successfully launch their direct-to-consumer retail offering with this rich, engaging e-commerce website</p>
@@ -274,7 +274,7 @@
 					<div class="grid grid--flexend">
 						
 						<div class="grid__item two-thirds">
-							<h4>Can't find what you're after?</h4>
+							<h3>Can't find what you're after?</h3>
 							<p>If you'd like to discuss a project or just can't find what you're looking for please <a href="mailto:hello@moymadethis.com">contact me</a>. It's free after all, and I'm sure I can take you through some case studies relevant to your project.</p>
 						</div>
 						
