Updated LinkedIn social image e after using tinypng to see if compression helps with LinkedIn sharing issue.

--- a/great-british-meat-co.html
+++ b/great-british-meat-co.html
@@ -115,8 +115,10 @@
 								<source src="video/work/gbm/xmas-landing.ogg" type="video/ogg">
 								Your browser does not support the video tag.
 							</video>
-							<button type="button" class="player__flow">Play</button>
-							<button type="button" class="player__audio">Unmute</button>
+							<div class="player__controls">
+								<button type="button" class="player__btn player__btn--flow">Play</button>
+								<button type="button" class="player__btn player__btn--audio">Unmute</button>
+							</div>
 						</div>
 					</figure>
 					
