--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 							<div class="work__desc">
 								<h2 class="work__title"><a href="great-british-meat-co.html">Great British<br /> Meat Co.</a></h2>
 								<hr />
-								<h4 class="work__sub-title">Web Design + Front-end dev</h4>
+								<h4 class="work__sub-title">Design + Front-end dev</h4>
 								<p>We helped the Great British Meat Co. successfully launch their direct-to-consumer retail offering with this rich, engaging e-commerce website</p>
 								<a href="great-british-meat-co.html" class="btn btn--arrow case__btn">View Case Study<svg class="icon icon--arrow"><use xlink:href="img/sprite/sprite.svg#icon-arrow"></use></svg></a>
 							</div>
@@ -141,7 +141,7 @@
 							<div class="work__desc">
 								<h2 class="work__title"><a href="beatsuite.html">The BeatSuite</a></h2>
 								<hr />
-								<h4 class="work__sub-title">Web Design + Front-end dev</h4>
+								<h4 class="work__sub-title">Design + Front-end dev</h4>
 								<p>We helped the Beat Suite increase retention and loyalty for a second time with this enterprise-level e-commerce website and iTunes integration.</p>
 								<a href="beatsuite.html" class="btn btn--arrow case__btn">View Case Study<svg class="icon icon--arrow"><use xlink:href="img/sprite/sprite.svg#icon-arrow"></use></svg></a>
 							</div>
@@ -153,7 +153,7 @@
 							<div class="work__desc">
 								<h2 class="work__title"><a href="pokerstars.html">PokerStars</a></h2>
 								<hr />
-								<h4 class="work__sub-title">Web Design + Front-end dev</h4>
+								<h4 class="work__sub-title">Design + Front-end dev</h4>
 								<p>We helped PokerStars leverage the power of online video content to drive cross-platform acquisition for the World’s biggest online poker brand</p>
 								<a href="pokerstars.html" class="btn btn--arrow case__btn">View Case Study<svg class="icon icon--arrow"><use xlink:href="img/sprite/sprite.svg#icon-arrow"></use></svg></a>
 							</div>
@@ -165,7 +165,7 @@
 							<div class="work__desc">
 								<h2 class="work__title"><a href="oobe.html">OOBE</a></h2>
 								<hr />
-								<h4 class="work__sub-title">Web Design + Front-end dev</h4>
+								<h4 class="work__sub-title">Design + Front-end dev</h4>
 								<p>We helped OOBE captivate their audience with this minimalist and yet highly interactive responsive website that allows their stunning portfolio of work to really sing.</p>
 								<a href="oobe.html" class="btn btn--arrow case__btn">View Case Study<svg class="icon icon--arrow"><use xlink:href="img/sprite/sprite.svg#icon-arrow"></use></svg></a>
 							</div>
@@ -177,7 +177,7 @@
 							<div class="work__desc">
 								<h2 class="work__title"><a href="open-college-of-the-arts.html">Open College of the Arts</a></h2>
 								<hr />
-								<h4 class="work__sub-title">Design</h4>
+								<h4 class="work__sub-title">Front-end dev</h4>
 								<p>We helped Open College of the Arts expand into new markets with this responsive e-commerce website, optimised for desktop, tablet and mobile devices.</p>
 								<a href="open-college-of-the-arts.html" class="btn btn--arrow case__btn">View Case Study<svg class="icon icon--arrow"><use xlink:href="img/sprite/sprite.svg#icon-arrow"></use></svg></a>
 							</div>
