--- a/work.html
+++ b/work.html
@@ -101,7 +101,7 @@
 							<div class="work__desc">
 								<h2 class="work__title"><a href="great-british-meat-co.html">Great British<br /> Meat Co.</a></h2>
 								<hr />
-								<h4 class="work__sub-title">Web Design + Front-end dev</h4>
+								<h4 class="work__sub-title">Design + Front-end dev</h4>
 								<p>We helped the Great British Meat Co. successfully launch their direct-to-consumer retail offering with this rich, engaging e-commerce website</p>
 								<a href="great-british-meat-co.html" class="btn btn--arrow case__btn">View Case Study<svg class="icon icon--arrow"><use xlink:href="img/sprite/sprite.svg#icon-arrow"></use></svg></a>
 							</div>
@@ -113,7 +113,7 @@
 							<div class="work__desc">
 								<h2 class="work__title"><a href="beatsuite.html">The BeatSuite</a></h2>
 								<hr />
-								<h4 class="work__sub-title">Web Design + Front-end dev</h4>
+								<h4 class="work__sub-title">Design + Front-end dev</h4>
 								<p>We helped the Beat Suite increase retention and loyalty for a second time with this enterprise-level e-commerce website and iTunes integration.</p>
 								<a href="beatsuite.html" class="btn btn--arrow case__btn">View Case Study<svg class="icon icon--arrow"><use xlink:href="img/sprite/sprite.svg#icon-arrow"></use></svg></a>
 							</div>
@@ -125,7 +125,7 @@
 							<div class="work__desc">
 								<h2 class="work__title"><a href="pokerstars.html">PokerStars</a></h2>
 								<hr />
-								<h4 class="work__sub-title">Web Design + Front-end dev</h4>
+								<h4 class="work__sub-title">Design + Front-end dev</h4>
 								<p>We helped PokerStars leverage the power of online video content to drive cross-platform acquisition for the World’s biggest online poker brand</p>
 								<a href="pokerstars.html" class="btn btn--arrow case__btn">View Case Study<svg class="icon icon--arrow"><use xlink:href="img/sprite/sprite.svg#icon-arrow"></use></svg></a>
 							</div>
@@ -137,7 +137,7 @@
 							<div class="work__desc">
 								<h2 class="work__title"><a href="oobe.html">OOBE</a></h2>
 								<hr />
-								<h4 class="work__sub-title">Web Design + Front-end dev</h4>
+								<h4 class="work__sub-title">Design + Front-end dev</h4>
 								<p>We helped OOBE captivate their audience with this minimalist and yet highly interactive responsive website that allows their stunning portfolio of work to really sing.</p>
 								<a href="oobe.html" class="btn btn--arrow case__btn">View Case Study<svg class="icon icon--arrow"><use xlink:href="img/sprite/sprite.svg#icon-arrow"></use></svg></a>
 							</div>
@@ -149,7 +149,7 @@
 							<div class="work__desc">
 								<h2 class="work__title"><a href="open-college-of-the-arts.html">Open College of the Arts</a></h2>
 								<hr />
-								<h4 class="work__sub-title">Design</h4>
+								<h4 class="work__sub-title">Front-end dev</h4>
 								<p>We helped Open College of the Arts expand into new markets with this responsive e-commerce website, optimised for desktop, tablet and mobile devices.</p>
 								<a href="open-college-of-the-arts.html" class="btn btn--arrow case__btn">View Case Study<svg class="icon icon--arrow"><use xlink:href="img/sprite/sprite.svg#icon-arrow"></use></svg></a>
 							</div>
@@ -161,7 +161,7 @@
 							<div class="work__desc">
 								<h2 class="work__title"><a href="metropolis.html">Metropolis Pictures</a></h2>
 								<hr />
-								<h4 class="work__sub-title">Web Design + Front-end dev</h4>
+								<h4 class="work__sub-title">Design</h4>
 								<p>We were appointed to design and build a creative, quirky new portfolio website to showcase the talents of Metropolis Pictures' roster of world class commercial directors.</p>
 								<a href="metropolis.html" class="btn btn--arrow case__btn">View Case Study<svg class="icon icon--arrow"><use xlink:href="img/sprite/sprite.svg#icon-arrow"></use></svg></a>
 							</div>
@@ -173,7 +173,7 @@
 							<div class="work__desc">
 								<h2 class="work__title"><a href="dene.html">Dene Group</a></h2>
 								<hr />
-								<h4 class="work__sub-title">Web Design / Front-end dev</h4>
+								<h4 class="work__sub-title">Brand + Front-end dev</h4>
 								<p></p>
 								<a href="dene.html" class="btn btn--arrow case__btn">View Case Study<svg class="icon icon--arrow"><use xlink:href="img/sprite/sprite.svg#icon-arrow"></use></svg></a>
 							</div>
@@ -209,7 +209,7 @@
 							<div class="work__desc">
 								<h2 class="work__title"><a href="education-world.html">Education World</a></h2>
 								<hr />
-								<h4 class="work__sub-title">Design + Front-end Dev</h4>
+								<h4 class="work__sub-title">Front-end Dev</h4>
 								<p>We helped Education World redefine personalised service, engaging north east schools and teachers with this responsive corporate website and smart customer dashboard.</p>
 								<a href="education-world.html" class="btn btn--arrow case__btn">View Case Study<svg class="icon icon--arrow"><use xlink:href="img/sprite/sprite.svg#icon-arrow"></use></svg></a>
 							</div>
@@ -221,7 +221,7 @@
 							<div class="work__desc">
 								<h2 class="work__title"><a href="ferno.html">Ferno</a></h2>
 								<hr />
-								<h4 class="work__sub-title">Design + Front-end Dev</h4>
+								<h4 class="work__sub-title">Design + Front-end dev</h4>
 								<p>We helped Ferno UK communicate a world class visual identity worthy of their position as market front-runner, with this product-focused corporate website.</p>
 								<a href="ferno.html" class="btn btn--arrow case__btn">View Case Study<svg class="icon icon--arrow"><use xlink:href="img/sprite/sprite.svg#icon-arrow"></use></svg></a>
 							</div>
@@ -233,7 +233,7 @@
 							<div class="work__desc">
 								<h2 class="work__title"><a href="infinite-edge.html">Infinite Edge</a></h2>
 								<hr />
-								<h4 class="work__sub-title">Front-end Dev</h4>
+								<h4 class="work__sub-title">Design + Front-end dev</h4>
 								<p>We helped Infinite Edge grow their design consultancy business with a beautiful corporate website that captured their unique approach to landscape design.</p>
 								<a href="infinite-edge.html" class="btn btn--arrow case__btn">View Case Study<svg class="icon icon--arrow"><use xlink:href="img/sprite/sprite.svg#icon-arrow"></use></svg></a>
 							</div>
@@ -245,7 +245,7 @@
 							<div class="work__desc">
 								<h2 class="work__title"><a href="simple-data.html">Simple Data</a></h2>
 								<hr />
-								<h4 class="work__sub-title">Brand/Design + Front-end Dev</h4>
+								<h4 class="work__sub-title">Brand / Design + Front-end dev</h4>
 								<p></p>
 								Well it was going to be an online data analytics app that allowed you to process big data and provide visual reports.
 								<a href="simple-data.html" class="btn btn--arrow case__btn">View Case Study<svg class="icon icon--arrow"><use xlink:href="img/sprite/sprite.svg#icon-arrow"></use></svg></a>
@@ -258,7 +258,7 @@
 							<div class="work__desc">
 								<h2 class="work__title"><a href="tte.html">TTE</a></h2>
 								<hr />
-								<h4 class="work__sub-title">Design + Front-end Dev</h4>
+								<h4 class="work__sub-title">Design + Front-end dev</h4>
 								<p>We helped TTE promote their technical apprenticeships to both students and employers with this clean, intuitive corporate website and content management system</p>
 								<a href="tte.html" class="btn btn--arrow case__btn">View Case Study<svg class="icon icon--arrow"><use xlink:href="img/sprite/sprite.svg#icon-arrow"></use></svg></a>
 							</div>
