Updated gbm files

--- a/sites/gbm/blog-index.html
+++ b/sites/gbm/blog-index.html
@@ -117,7 +117,7 @@
 											<div class="mosaic__caption">
 												<h2 class="mosaic__title p-name"><span class="flag p-category">Pork</span> <a href="#" class="moasic__title-link">Smoked Back Bacon</a></h2>
 												<p class="mosaic__desc e-description">British Back Bacon</p>
-												<p class="value"><del>£4.95</del> <data class="p-price" value="4.05">£4.05</data></p>
+												<p class="mosaic__value"><del>£4.95</del> <data class="p-price" value="4.05">£4.05</data></p>
 												<a href="#" class="btn">Add to Cart</a>
 											</div>
 										</li>
@@ -128,7 +128,7 @@
 											<div class="mosaic__caption">
 												<h2 class="mosaic__title p-name"><span class="flag p-category">Beef</span> <a href="#" class="moasic__title-link">Sirloin Steaks</a></h2>
 												<p class="mosaic__desc e-description">2 x 227g/8oz Steaks</p>
-												<p class="value"><del>£12.80</del> <data class="p-price" value="11.60">£11.60</data></p>
+												<p class="mosaic__value"><del>£12.80</del> <data class="p-price" value="11.60">£11.60</data></p>
 												<a href="#" class="btn">Add to Cart</a>
 											</div>
 										</li>
@@ -139,7 +139,7 @@
 											<div class="mosaic__caption">
 												<h2 class="mosaic__title p-name"><span class="flag p-category">Beef</span> <a href="#" class="moasic__title-link">Silverside Joint</a></h2>
 												<p class="mosaic__desc e-description">1kg (serves 2-4)</p>
-												<p class="value"><del>£12.00</del> <data class="p-price" value="6.77">£6.77</data></p>
+												<p class="mosaic__value"><del>£12.00</del> <data class="p-price" value="6.77">£6.77</data></p>
 												<a href="#" class="btn">Add to Cart</a>
 											</div>
 										</li>
