--- a/sites/gbm/product-index.html
+++ b/sites/gbm/product-index.html
@@ -102,10 +102,10 @@
 			</header>
 			
 			<div class="masthead">
-				<div class="wrap">
+				<div class="wrap wrap--narrow">
 					
 					<h1 class="masthead__title">Beef</h1>
-					<p class="masthead__text">We're really proud of our beef here at Great British Meat Company. It's sourced from beef herds, raised by award winning independent farmers, near to us here on the lovely grasslands of Northern England. Working with independent farmers and abattoirs means we pay a fair price to the farmer, cutting out the middle-men, and we are able to get it produced to our exact specification. We then age it for up to four weeks in a temperature controlled ageing room, where it slowly looses moisture, develops flavour and becomes more and more tender. This gives our beef a natural sweetness, and because we butcher it ourselves, we can ensure only the best cuts make it to your plate.</p>
+					<p class="masthead__text">We're really proud of our beef here at Great British Meat Company. It's sourced from beef herds, raised by award winning independent farmers, near to us here on the lovely grasslands of Northern England.</p>
 					
 				</div>
 			</div>
@@ -191,7 +191,7 @@
 											<span class="flag p-category">Special Offer</span>
 											<h2 class="mosaic__title p-name"><a href="#" class="moasic__title-link">Smoked Back Bacon</a></h2>
 											<p class="mosaic__desc e-description">British Back Bacon</p>
-											<p class="value"><del>£4.95</del> <data class="p-price" value="4.05">£4.05</data></p>
+											<p class="mosaic__value"><del>£4.95</del> <data class="p-price" value="4.05">£4.05</data></p>
 											<a href="#" class="btn">Add to Cart</a>
 										</div>
 									</div>
@@ -205,7 +205,7 @@
 											<span class="flag p-category">Limited Stock</span>
 											<h2 class="mosaic__title p-name"><a href="#" class="moasic__title-link">Sirloin Steaks</a></h2>
 											<p class="mosaic__desc e-description">2 x 227g/8oz Steaks</p>
-											<p class="value"><del>£12.80</del> <data class="p-price" value="11.60">£11.60</data></p>
+											<p class="mosaic__value"><del>£12.80</del> <data class="p-price" value="11.60">£11.60</data></p>
 											<a href="#" class="btn">Add to Cart</a>
 										</div>
 									</div>
@@ -218,7 +218,7 @@
 										<div class="mosaic__caption">
 											<h2 class="mosaic__title p-name"><a href="#" class="moasic__title-link">Silverside Joint</a></h2>
 											<p class="mosaic__desc e-description">1kg (serves 2-4)</p>
-											<p class="value"><del>£12.00</del> <data class="p-price" value="6.77">£6.77</data></p>
+											<p class="mosaic__value"><del>£12.00</del> <data class="p-price" value="6.77">£6.77</data></p>
 											<a href="#" class="btn">Add to Cart</a>
 										</div>
 									</div>
@@ -231,7 +231,7 @@
 										<div class="mosaic__caption">
 											<h2 class="mosaic__title p-name">Lamb</span> <a href="#" class="moasic__title-link">Lamb Shanks</a></h2>
 											<p class="mosaic__desc e-description">2 x 454g/16oz</p>
-											<p class="value"><del>£12.00</del> <data class="p-price" value="10.00">£10.00</data></p>
+											<p class="mosaic__value"><del>£12.00</del> <data class="p-price" value="10.00">£10.00</data></p>
 											<a href="#" class="btn">Add to Cart</a>
 										</div>
 									</div>
@@ -244,7 +244,7 @@
 										<div class="mosaic__caption">
 											<h2 class="mosaic__title p-name">Lamb</span> <a href="#" class="moasic__title-link">Lamb Leg Boneless</a></h2>
 											<p class="mosaic__desc e-description">900g serves 3-4 people</p>
-											<p class="value"><del>£20.25</del> <data class="p-price" value="12.50">£12.50</data></p>
+											<p class="mosaic__value"><del>£20.25</del> <data class="p-price" value="12.50">£12.50</data></p>
 											<a href="#" class="btn">Add to Cart</a>
 										</div>
 									</div>
@@ -257,7 +257,7 @@
 										<div class="mosaic__caption">
 											<h2 class="mosaic__title p-name"><a href="#" class="moasic__title-link">Racks of Lamb</a></h2>
 											<p class="mosaic__desc e-description">2 x 3-bone racks (170g/6oz)</p>
-											<p class="value"><del>£14.00</del> <data class="p-price" value="12.00">£12.00</data></p>
+											<p class="mosaic__value"><del>£14.00</del> <data class="p-price" value="12.00">£12.00</data></p>
 											<a href="#" class="btn">Add to Cart</a>
 										</div>
 									</div>
@@ -270,7 +270,7 @@
 										<div class="mosaic__caption">
 											<h2 class="mosaic__title p-name"><a href="#" class="moasic__title-link">Smoked Back Bacon</a></h2>
 											<p class="mosaic__desc e-description">British Back Bacon</p>
-											<p class="value"><del>£4.95</del> <data class="p-price" value="4.05">£4.05</data></p>
+											<p class="mosaic__value"><del>£4.95</del> <data class="p-price" value="4.05">£4.05</data></p>
 											<a href="#" class="btn">Add to Cart</a>
 										</div>
 									</div>
@@ -283,7 +283,7 @@
 										<div class="mosaic__caption">
 											<h2 class="mosaic__title p-name"><a href="#" class="moasic__title-link">Sirloin Steaks</a></h2>
 											<p class="mosaic__desc e-description">2 x 227g/8oz Steaks</p>
-											<p class="value"><del>£12.80</del> <data class="p-price" value="11.60">£11.60</data></p>
+											<p class="mosaic__value"><del>£12.80</del> <data class="p-price" value="11.60">£11.60</data></p>
 											<a href="#" class="btn">Add to Cart</a>
 										</div>
 									</div>
@@ -296,7 +296,7 @@
 										<div class="mosaic__caption">
 											<h2 class="mosaic__title p-name"><a href="#" class="moasic__title-link">Silverside Joint</a></h2>
 											<p class="mosaic__desc e-description">1kg (serves 2-4)</p>
-											<p class="value"><del>£12.00</del> <data class="p-price" value="6.77">£6.77</data></p>
+											<p class="mosaic__value"><del>£12.00</del> <data class="p-price" value="6.77">£6.77</data></p>
 											<a href="#" class="btn">Add to Cart</a>
 										</div>
 									</div>
@@ -309,7 +309,7 @@
 										<div class="mosaic__caption">
 											<h2 class="mosaic__title p-name">Lamb</span> <a href="#" class="moasic__title-link">Lamb Shanks</a></h2>
 											<p class="mosaic__desc e-description">2 x 454g/16oz</p>
-											<p class="value"><del>£12.00</del> <data class="p-price" value="10.00">£10.00</data></p>
+											<p class="mosaic__value"><del>£12.00</del> <data class="p-price" value="10.00">£10.00</data></p>
 											<a href="#" class="btn">Add to Cart</a>
 										</div>
 									</div>
@@ -322,7 +322,7 @@
 										<div class="mosaic__caption">
 											<h2 class="mosaic__title p-name">Lamb</span> <a href="#" class="moasic__title-link">Lamb Leg Boneless</a></h2>
 											<p class="mosaic__desc e-description">900g serves 3-4 people</p>
-											<p class="value"><del>£20.25</del> <data class="p-price" value="12.50">£12.50</data></p>
+											<p class="mosaic__value"><del>£20.25</del> <data class="p-price" value="12.50">£12.50</data></p>
 											<a href="#" class="btn">Add to Cart</a>
 										</div>
 									</div>
@@ -335,7 +335,7 @@
 										<div class="mosaic__caption">
 											<h2 class="mosaic__title p-name"><a href="#" class="moasic__title-link">Racks of Lamb</a></h2>
 											<p class="mosaic__desc e-description">2 x 3-bone racks (170g/6oz)</p>
-											<p class="value"><del>£14.00</del> <data class="p-price" value="12.00">£12.00</data></p>
+											<p class="mosaic__value"><del>£14.00</del> <data class="p-price" value="12.00">£12.00</data></p>
 											<a href="#" class="btn">Add to Cart</a>
 										</div>
 									</div>
