Updated GBM files

--- a/sites/gbm/product-detail.html
+++ b/sites/gbm/product-detail.html
@@ -17,7 +17,9 @@
 
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="css/main.css">
-		<link rel="stylesheet" type="text/css" href="css/slick.css" />
+		
+		<!-- FONTS -->
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i,800,800i" rel="stylesheet">
 
 		<!-- Favicon -->
 		<link rel="shortcut icon" type="image/ico" href="favicon.ico">
@@ -170,7 +172,7 @@
 											<td>
 												<label class="control control--radio">
 													<input type="radio" checked="checked" name="product-choice" />
-													<div class="control__indicator"></div>
+													<div class="control__input"></div>
 											    </label>
 											</td>
 										</tr>
@@ -179,8 +181,8 @@
 											<td>£20.00</td>
 											<td>
 												<label class="control control--radio">
-													<input type="radio"  name="product-choice" />
-													<div class="control__indicator"></div>
+													<input type="radio" name="product-choice" />
+													<div class="control__input"></div>
 											    </label>
 											</td>
 										</tr>
