--- a/sites/gbm/search-results.html
+++ b/sites/gbm/search-results.html
@@ -17,6 +17,9 @@
 
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		
+		<!-- FONTS -->
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i,800,800i" rel="stylesheet">
 
 		<!-- Favicon -->
 		<link rel="shortcut icon" type="image/ico" href="favicon.ico">
